src/libqgesture.h

typedef struct QGesture QGesture;
typedef struct QGestureEvent QGestureEvent;
typedef struct QPointF QPointF;
typedef struct QWidget QWidget;
QGestureEvent* QGestureEvent_new(libqt_list /* of QGesture* */ gestures);
QGestureEvent* QGestureEvent_new2(QGestureEvent* param1);
libqt_list /* of QGesture* */ QGestureEvent_Gestures(const QGestureEvent* self);
QGesture* QGestureEvent_Gesture(const QGestureEvent* self, int typeVal);
libqt_list /* of QGesture* */ QGestureEvent_ActiveGestures(const QGestureEvent* self);
libqt_list /* of QGesture* */ QGestureEvent_CanceledGestures(const QGestureEvent* self);
void QGestureEvent_SetAccepted(QGestureEvent* self, QGesture* param1, bool param2);
void QGestureEvent_Accept(QGestureEvent* self, QGesture* param1);
void QGestureEvent_Ignore(QGestureEvent* self, QGesture* param1);
bool QGestureEvent_IsAccepted(const QGestureEvent* self, QGesture* param1);
void QGestureEvent_SetAccepted2(QGestureEvent* self, int param1, bool param2);
void QGestureEvent_AcceptWithQtGestureType(QGestureEvent* self, int param1);
void QGestureEvent_IgnoreWithQtGestureType(QGestureEvent* self, int param1);
bool QGestureEvent_IsAcceptedWithQtGestureType(const QGestureEvent* self, int param1);
void QGestureEvent_SetWidget(QGestureEvent* self, QWidget* widget);
QWidget* QGestureEvent_Widget(const QGestureEvent* self);
QPointF* QGestureEvent_MapToGraphicsScene(const QGestureEvent* self, QPointF* gesturePoint);