src/libqgesture.bf

public struct QGestureEvent
{
	[LinkName("QGestureEvent_new")]
	public static extern void* QGestureEvent_new(QGesture[] gestures);
	[LinkName("QGestureEvent_new2")]
	public static extern void* QGestureEvent_new2(QGestureEvent param1);
	[LinkName("QGestureEvent_Gestures")]
	public static extern QGesture[] QGestureEvent_Gestures(void* c_this);
	[LinkName("QGestureEvent_Gesture")]
	public static extern QGesture QGestureEvent_Gesture(void* c_this, int64 typeVal);
	[LinkName("QGestureEvent_ActiveGestures")]
	public static extern QGesture[] QGestureEvent_ActiveGestures(void* c_this);
	[LinkName("QGestureEvent_CanceledGestures")]
	public static extern QGesture[] QGestureEvent_CanceledGestures(void* c_this);
	[LinkName("QGestureEvent_SetAccepted")]
	public static extern void QGestureEvent_SetAccepted(void* c_this, QGesture param1, bool param2);
	[LinkName("QGestureEvent_Accept")]
	public static extern void QGestureEvent_Accept(void* c_this, QGesture param1);
	[LinkName("QGestureEvent_Ignore")]
	public static extern void QGestureEvent_Ignore(void* c_this, QGesture param1);
	[LinkName("QGestureEvent_IsAccepted")]
	public static extern bool QGestureEvent_IsAccepted(void* c_this, QGesture param1);
	[LinkName("QGestureEvent_SetAccepted2")]
	public static extern void QGestureEvent_SetAccepted2(void* c_this, int64 param1, bool param2);
	[LinkName("QGestureEvent_AcceptWithQtGestureType")]
	public static extern void QGestureEvent_AcceptWithQtGestureType(void* c_this, int64 param1);
	[LinkName("QGestureEvent_IgnoreWithQtGestureType")]
	public static extern void QGestureEvent_IgnoreWithQtGestureType(void* c_this, int64 param1);
	[LinkName("QGestureEvent_IsAcceptedWithQtGestureType")]
	public static extern bool QGestureEvent_IsAcceptedWithQtGestureType(void* c_this, int64 param1);
	[LinkName("QGestureEvent_SetWidget")]
	public static extern void QGestureEvent_SetWidget(void* c_this, QWidget widget);
	[LinkName("QGestureEvent_Widget")]
	public static extern QWidget QGestureEvent_Widget(void* c_this);
	[LinkName("QGestureEvent_MapToGraphicsScene")]
	public static extern QPointF QGestureEvent_MapToGraphicsScene(void* c_this, QPointF gesturePoint);
}